[Fix]
<p> tag not aligns text to center

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -2,6 +2,7 @@ p {
     font-family: tahoma;
     font-size: 16px;
     color: white;
+    text-align: center;
 }
 
 hr {
